# imagemd

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  cuddly-launching-ladybug.md  enhanced_table_detection_analysis.py  output.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: entrypoint.sh
docs/: AIRGAPPED.md  CONFIGURATION.md  EXAMPLES.md  INSTALLATION.md  Makefile  TROUBLESHOOTING.md  api_reference.rst  conf.py  index.rst  tutorials.rst  user_guide.rst
docs/source/: conf.py  core.rst  index.rst  installation.rst
scripts/: analyze_pmp_structure.py  simple_test.py  test_actual_pdf.py  test_formatters.py  test_pmp_structured.py  test_pmp_tables.py  test_visionpdf.py
tests/: __init__.py  conftest.py  test_integration.py  test_markdown_formatters.py  test_ocr_integration.py  test_performance_optimization.py
tests/integration/: test_pdf_processing.py
tests/unit/: test_config.py  test_document.py
vision_pdf/: __init__.py
vision_pdf/api/: main.py  models.py
vision_pdf/api/routes/: __init__.py  convert.py  health.py  jobs.py  models.py
vision_pdf/backends/: __init__.py  base.py  custom.py  llama_cpp.py  ollama.py
vision_pdf/cli/: main.py
vision_pdf/config/: __init__.py  defaults.yaml  settings.py
vision_pdf/core/: __init__.py  document.py  processor.py
vision_pdf/markdown/: generator.py
vision_pdf/markdown/formatters/: code.py  enhanced_tables.py  math.py  math_temp.py  structured_content.py  tables.py
vision_pdf/ocr/: __init__.py  base.py
vision_pdf/ocr/engines/: easyocr_engine.py  paddleocr_engine.py  tesseract_engine.py
vision_pdf/pdf/: __init__.py  analyzer.py  extractor.py  renderer.py
vision_pdf/utils/: __init__.py  cache.py  exceptions.py  images.py  logging_config.py  parallel.py  performance.py  validation.py
